<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="roque.com.test02.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/relativeLayout"
        android:background="@drawable/bg_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:background="#90292929">
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="38sp"
                android:inputType="textPersonName"
                android:text="@string/txt_activity_titulo" />

            <TextView
                android:id="@+id/txtSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="24sp"
                android:inputType="textPersonName"
                android:text="@string/txt_activity_subtitulo"
                android:textColor="#fff"
                android:layout_below="@+id/txtTitle"/>
        </LinearLayout>
    </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <android.support.v7.widget.CardView
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgSong1"
                        android:layout_width="match_parent"
                        android:layout_height="205dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg_song1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/txt1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/txt_activity_song1"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/txt1"
                                android:text="@string/txt_activity_song1Subtitle"
                                android:textSize="11dp" />
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgSong2"
                        android:layout_width="match_parent"
                        android:layout_height="205dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg_song2" />
                    <TextView
                        android:id="@+id/txt3"
                        android:layout_marginTop="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/txt_activity_song2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_activity_song2Subtitle"
                        android:layout_below="@+id/txt3"
                        android:textSize="11dp"
                        android:id="@+id/textView" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <android.support.v7.widget.CardView
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgSong3"
                    android:layout_width="match_parent"
                    android:layout_height="205dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_song3" />
                <TextView
                    android:id="@+id/txt5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/txt_activity_song1"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt5"
                    android:text="@string/txt_activity_song1Subtitle"
                    android:textSize="11dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgSong4"
                    android:layout_width="match_parent"
                    android:layout_height="205dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_song4" />
                <TextView
                    android:id="@+id/txt4"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/txt_activity_song2"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_activity_song2Subtitle"
                    android:layout_below="@+id/txt3"
                    android:textSize="11dp"
                    android:id="@+id/textView4" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>



</LinearLayout>
</ScrollView>
